# anwb-member-score

./: .pre-commit-config.yaml  Dockerfile  MLproject  README.md  invoke.yaml  pyproject.toml  test.py
.github/workflows/: publish.yml
confs/: column_names_translations.json
emr/scripts/: add_job_flow_steps.py  create_cfn_stack.py  create_inputs_files.py  create_state_machine.py  execute_state_machine.py  upload_apps_to_s3.py  upload_parquet_files_to_s3.py
emr/scripts/parameters/: parameters.py
emr/step_functions/definitions/: step_function_emr_process.json
emr/step_functions/inputs/: step_function_inputs_process.json
emr/step_functions/templates/: step_function_inputs_process.j2
notebooks/eda/: pre_eda.ipynb
src/anwb_member_score/: __init__.py  __main__.py
src/anwb_member_score/rfm_dataprep/: data_prep.py  parallel_data_prep.py
tasks/: projects.py
tests/: test_scripts.py
